Regression: Crash when executing bpy.types.ShapeKey.normals_vertex_get #96294

Closed
opened 2022-03-10 14:00:56 +01:00 by Kesk Y · 9 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.79

Blender Version
Worked: 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: dc2d180181
Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: c77597cd0e
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-08 23:13, hash: 2146256563
Caused by cfa53e0fbe

Short description of error
Run below code with mesh has shapekey will cause crash as EXCEPTION_ACCESS_VIOLATION.
bpy.data.meshes['Cube'].shape_keys.key_blocks['Key 1'].normals_vertex_get()

Exact steps for others to reproduce the error

  1. open attached .blend
  2. press run script of text editor,
  or run `bpy.data.meshes['Cube'].shape_keys.key_blocks['Key 1'].normals_vertex_get()` in python console

or

  1. launch blender
  2. add cube
  3. add one or more shapekey to cube
  4. run bpy.data.meshes['Cube'].shape_keys.key_blocks[any_key(0,1,... or "Basis", "Key 1" and so on )].normals_vertex_get() in python console

Test File:
crasher.blend
Append
This crash affect to addon of export .vrm file with VRM_Addon_for_Blender. (https://github.com/saturday06/VRM_Addon_for_Blender)
Thanks.

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.79 **Blender Version** Worked: 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: `dc2d180181` Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: `c77597cd0e` Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-08 23:13, hash: `2146256563` Caused by cfa53e0fbe **Short description of error** Run below code with mesh has shapekey will cause crash as EXCEPTION_ACCESS_VIOLATION. `bpy.data.meshes['Cube'].shape_keys.key_blocks['Key 1'].normals_vertex_get()` **Exact steps for others to reproduce the error** 1. open attached .blend 2. press run script of text editor, ``` or run `bpy.data.meshes['Cube'].shape_keys.key_blocks['Key 1'].normals_vertex_get()` in python console ``` or 1. launch blender 1. add cube 2. add one or more shapekey to cube 3. run `bpy.data.meshes['Cube'].shape_keys.key_blocks[any_key(0,1,... or "Basis", "Key 1" and so on )].normals_vertex_get()` in python console Test File: [crasher.blend](https://archive.blender.org/developer/F12919626/crasher.blend) **Append** This crash affect to addon of export .vrm file with VRM_Addon_for_Blender. (https://github.com/saturday06/VRM_Addon_for_Blender) Thanks.
Author

Added subscriber: @icyp

Added subscriber: @icyp
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Thanks for the report. I can confirm.
Crash came with cfa53e0fbe
@HooglyBoogly , can you check?

>	blender.exe!BKE_keyblock_mesh_calc_normals(KeyBlock * kb, Mesh * mesh, float[3] * r_vertnors, float[3] * r_polynors, float[3] * r_loopnors) Line 2226	C

 	blender.exe!rna_KeyBlock_normals_vert_calc(ID * id, KeyBlock * data, int * normals_len, float * * normals) Line 212	C
 	blender.exe!ShapeKey_normals_vertex_get_call(bContext * C, ReportList * reports, PointerRNA * _ptr, ParameterList * _parms) Line 737	C
 	blender.exe!RNA_function_call(bContext * C, ReportList * reports, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) Line 7329	C
 	blender.exe!pyrna_func_call(BPy_FunctionRNA * self, _object * args, _object * kw) Line 6298	C
 	[External Code]	
 	blender.exe!python_script_exec(bContext * C, const unsigned char * fn, Text * text, ReportList * reports, const bool do_jump) Line 121	C
 	blender.exe!BPY_run_text(bContext * C, Text * text, ReportList * reports, const bool do_jump) Line 217	C
 	blender.exe!text_run_script(bContext * C, ReportList * reports) Line 773	C
 	blender.exe!text_run_script_exec(bContext * C, wmOperator * op) Line 814	C
 	blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1350	C
 	blender.exe!wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const wmOperatorCallContext context, const bool poll_only, wmEvent * event) Line 1543	C
 	blender.exe!WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, wmOperatorCallContext context, PointerRNA * properties) Line 1591	C
 	blender.exe!WM_operator_name_call_ptr_with_depends_on_cursor(bContext * C, wmOperatorType * ot, wmOperatorCallContext opcontext, PointerRNA * properties, const unsigned char * drawstr) Line 1779	C
 	blender.exe!ui_apply_but_funcs_after(bContext * C) Line 1013	C
 	blender.exe!ui_handler_region_menu(bContext * C, const wmEvent * event, void * UNUSED_userdata) Line 11390	C
 	blender.exe!wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Line 707	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Line 3042	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3161	C
 	blender.exe!wm_event_do_handlers(bContext * C) Line 3715	C
 	blender.exe!WM_main(bContext * C) Line 625	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 548	C
Thanks for the report. I can confirm. Crash came with cfa53e0fbe @HooglyBoogly , can you check? ```lines=10 > blender.exe!BKE_keyblock_mesh_calc_normals(KeyBlock * kb, Mesh * mesh, float[3] * r_vertnors, float[3] * r_polynors, float[3] * r_loopnors) Line 2226 C blender.exe!rna_KeyBlock_normals_vert_calc(ID * id, KeyBlock * data, int * normals_len, float * * normals) Line 212 C blender.exe!ShapeKey_normals_vertex_get_call(bContext * C, ReportList * reports, PointerRNA * _ptr, ParameterList * _parms) Line 737 C blender.exe!RNA_function_call(bContext * C, ReportList * reports, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) Line 7329 C blender.exe!pyrna_func_call(BPy_FunctionRNA * self, _object * args, _object * kw) Line 6298 C [External Code] blender.exe!python_script_exec(bContext * C, const unsigned char * fn, Text * text, ReportList * reports, const bool do_jump) Line 121 C blender.exe!BPY_run_text(bContext * C, Text * text, ReportList * reports, const bool do_jump) Line 217 C blender.exe!text_run_script(bContext * C, ReportList * reports) Line 773 C blender.exe!text_run_script_exec(bContext * C, wmOperator * op) Line 814 C blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1350 C blender.exe!wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const wmOperatorCallContext context, const bool poll_only, wmEvent * event) Line 1543 C blender.exe!WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, wmOperatorCallContext context, PointerRNA * properties) Line 1591 C blender.exe!WM_operator_name_call_ptr_with_depends_on_cursor(bContext * C, wmOperatorType * ot, wmOperatorCallContext opcontext, PointerRNA * properties, const unsigned char * drawstr) Line 1779 C blender.exe!ui_apply_but_funcs_after(bContext * C) Line 1013 C blender.exe!ui_handler_region_menu(bContext * C, const wmEvent * event, void * UNUSED_userdata) Line 11390 C blender.exe!wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Line 707 C blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Line 3042 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3161 C blender.exe!wm_event_do_handlers(bContext * C) Line 3715 C blender.exe!WM_main(bContext * C) Line 625 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 548 C ```
Pratik Borhade changed title from bpy.types.ShapeKey.normals_vertex_get is Broken with crash on Blender 3.1. to Crash when executing bpy.types.ShapeKey.normals_vertex_get 2022-03-10 14:52:01 +01:00
Hans Goudey self-assigned this 2022-03-11 04:21:20 +01:00

This issue was referenced by b89437c27e

This issue was referenced by b89437c27e4ce286d8f3525ade8d8d28c35d582f

This issue was referenced by b0aaf6ff4a

This issue was referenced by b0aaf6ff4a9731e9142d8cf32ebcc1a01a4f5cc8
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Philipp Oeser changed title from Crash when executing bpy.types.ShapeKey.normals_vertex_get to Regression: Crash when executing bpy.types.ShapeKey.normals_vertex_get 2022-03-22 16:07:37 +01:00

Added subscriber: @DayMtyeetung

Added subscriber: @DayMtyeetung
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96294
No description provided.